--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="MusicPlayer" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="MusicPlayer" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColor">@color/mainTextColor</item>
-        <item name="android:labelTextSize">13dp</item>
+        <item name="android:textColorPrimary">@color/mainTextColor</item>
+        <item name="android:progressBackgroundTint">#FF803E</item>
+        <item name="android:progressTint">#FF803E</item>
+        <item name="android:colorControlActivated">#FF803E</item>
+
+
     </style>
 
 </resources>
