--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#0058FF</color>
     <color name="colorPrimaryDark">#0E2292</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#FF803E</color>
     <color name="mainTextColor">#FF803E</color>
 </resources>
